--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,69 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
- // @import '../node_modules/@fortawesome/fontawesome-free/css/fontawesome.css';
+@import './assets/css/font-montserrat.css';
+@import "./assets/css/font-roboto.css";
+@import './assets/css/font-great-vibes.css'; // @import '../node_modules/@fortawesome/fontawesome-free/css/fontawesome.css';
 // @import '../node_modules/@fortawesome/fontawesome-free/css/solid.css';
 // @import '../node_modules/@fortawesome/fontawesome-free/css/brands.css';
-@import '../node_modules/@fortawesome/fontawesome-free/css/all.css';
+@import '../node_modules/@fortawesome/fontawesome-free/css/all.css'; // green - 90BF4D
+// lightblue - 27B8E4
+// white-skin color -  ffb6b6
+// dark-skin color - a0616a
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 1px;
+  -webkit-font-smoothing: antialiased;
+  scroll-behavior: smooth !important;
+  overflow-x: hidden !important;
+  // background-color: #f8f9fa;
+}
+
+* img::selection {
+  background-color: transparent!important;
+}
+
+* img {
+  user-drag: none !important;
+  user-select: none !important;
+  -moz-user-select: none !important;
+  -webkit-user-drag: none !important;
+  -webkit-user-select: none !important;
+  -ms-user-select: none !important;
+}
+
+*a,
+button {
+  outline: none!important;
+  box-shadow: none!important;
+}
+
+* strong {
+  font-weight: 600;
+}
+
+::selection {
+  // color: #f1f1f1;
+  // background-color: #80868b!important;
+}
+
+.container-fluid {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.container {
+  max-width: 70vw;
+}
+@media (max-width: 1500px) {
+  .container {
+    max-width: 90vw;
+  }
+}
+@media (max-width: 1100px) {}
+@media (max-width: 1000px) {}
+@media (max-width: 600px) {}
