refined text under metatags description

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,8 @@
 @import './assets/css/font-great-vibes.css'; // @import '../node_modules/@fortawesome/fontawesome-free/css/fontawesome.css';
 // @import '../node_modules/@fortawesome/fontawesome-free/css/solid.css';
 // @import '../node_modules/@fortawesome/fontawesome-free/css/brands.css';
-@import '../node_modules/@fortawesome/fontawesome-free/css/all.css'; // green - 90BF4D
+@import '../node_modules/@fortawesome/fontawesome-free/css/all.css';
+// green - 90BF4D
 // lightblue - 27B8E4
 // white-skin color -  ffb6b6
 // dark-skin color - a0616a
