--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -50,6 +50,16 @@
     scroll-margin-top: 8vh!important;
     padding: 9vh 20px;
 
+    .section-title{
+      font-size: 2rem;
+      margin-bottom: 30px;
+      font-weight: 600;
+
+      span{
+        color: #27B8E4;
+      }
+    }
+
     .service-item {
       border: 1px solid #e1e1e1;
       border-radius: 8px;
@@ -96,7 +106,7 @@
       margin-bottom: 30px;
       display: block;
 
-      strong{
+      strong {
         color: #90BF4D;
       }
     }
@@ -108,4 +118,37 @@
       }
     }
   }
+}
+@media (max-width: 1500px) {}
+@media (max-width: 1100px) {}
+@media (max-width: 1000px) {
+  #services{
+    .services-section-description {
+      font-size: 1.2rem!important;
+      line-height: 2rem!important;
+      color: #5f6063;
+      margin: 30px 0!important;
+      display: block;
+
+      strong {
+        color: #90BF4D;
+      }
+    }
+  }
+}
+@media (max-width: 600px) {
+  main {
+    .content {
+      h1 {
+        font-size: 2rem!important;
+        line-height: 2.5rem!important;
+      }
+
+      p {
+        width: 100%!important;
+      }
+    }
+  }
+
+
 }
