--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -79,6 +79,10 @@
     color: #5f6063!important;
   }
 
+  .navbar-toggler {
+    color: #3c4043!important;
+  }
+
   .nav-link:after {
     background: #80868b;
   }
@@ -95,7 +99,7 @@
   border: none;
   outline: none;
   font-size: 1.8rem;
-  color: #3c4043;
+  color: #fff;
 }
 
 .side-menu {
@@ -144,7 +148,7 @@
 }
 
 .active-link-ms {
-  background-color: #4673b6!important;
+  background-color: #90BF4D!important;
 
   a {
     color: #fff!important;
