--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -16,10 +16,10 @@
       <a class="nav-link" [routerLink]="'/home'" [ngClass]="{'active-link':router.url.includes('home') || router.url.length < 2}">Home<span class="sr-only">(current)</span></a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#services" [ngClass]="{'active-link':router.url.includes('podcast')}">Services</a>
+      <a class="nav-link" [routerLink]="'/services'" [ngClass]="{'active-link':router.url.includes('service')}">Services</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="about" [ngClass]="{'active-link':router.url.includes('about')}">About</a>
+      <a class="nav-link" [routerLink]="'/about'" [ngClass]="{'active-link':router.url.includes('about')}">About</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#contact" [ngClass]="{'active-link':router.url.includes('contact')}">Contact us</a>
@@ -44,10 +44,10 @@
       <li class="nav-item" [routerLink]="'/home'" [ngClass]="{'active-link-ms':router.url.includes('home') || router.url.length < 2}">
         <a class="nav-link-ms">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item" href="#services" [ngClass]="{'active-link-ms':router.url.includes('podcast')}">
+      <li class="nav-item" [routerLink]="'/services'" [ngClass]="{'active-link-ms':router.url.includes('service')}">
         <a class="nav-link-ms">Services</a>
       </li>
-      <li class="nav-item" href="about" [ngClass]="{'active-link-ms':router.url.includes('about')}">
+      <li class="nav-item" [routerLink]="'/about'" [ngClass]="{'active-link-ms':router.url.includes('about')}">
         <a class="nav-link-ms">About</a>
       </li>
       <li class="nav-item" [ngClass]="{'active-link-ms':router.url.includes('contact')}">
