--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -37,7 +37,7 @@
         </div>
       </div>
 
-      <button class="btn btn-view-more-services" routerLink="'/services'">View all services <i class="fa-solid fa-arrow-right-long"></i></button>
+      <button class="btn btn-view-more-services" [routerLink]="'/services'">View all services <i class="fa-solid fa-arrow-right-long"></i></button>
 
     </div>
   </div>
