added content to contact page created a shared component for contact form added notification service, interceptor for gmail passkey, email endpoint and setup functions for creating HTML email

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,1 +1,19 @@
-<p>contact works!</p>
+<div class="container-fluid contact">
+  <div class="landing-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-md-12 col-lg-9">
+          <div class="content">
+            <h1>Talk to us</h1>
+            <p>
+              At New Day Communications, we are committed to excellence and integrity. We value your trust and satisfaction. If you are interested in our services or have any questions, please feel free to contact us.
+            </p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  <app-contact-form></app-contact-form>
+</div>
