--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,7 +8,7 @@
           <div class="content">
             <h1>{{content.title}}</h1>
             <p>{{content.description}}</p>
-            <button class="btn btn-cta" [routerLink]="'/'">Contact us</button>
+            <button class="btn btn-cta" [routerLink]="'/contac-us'">Contact us</button>
           </div>
         </div>
 
@@ -74,5 +74,9 @@
       </div>
     </div>
   </div>
+
+
+  <app-contact-form></app-contact-form>
+
 
 </div>
