--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -32,7 +32,7 @@
 
             <h4>{{service.title}}</h4>
             <p>{{service.description}}</p>
-            <span class="inquire">Inquire <i class="fa-solid fa-arrow-right-long"></i></span>
+            <!-- <span class="inquire">Inquire <i class="fa-solid fa-arrow-right-long"></i></span> -->
           </div>
         </div>
       </div>
