--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -32,7 +32,7 @@
           <span class="service-index">{{i+1}}</span>
           <h4>{{service.title}}</h4>
           <p>{{service.description}}</p>
-          <span class="inquire">Inquire <i class="fa-solid fa-arrow-right-long"></i></span>
+          <span class="inquire" data-toggle="modal" data-target="#serviceRequestModal" (click)="user.category = service.title">Inquire <i class="fa-solid fa-arrow-right-long"></i></span>
 
         </div>
 
@@ -47,12 +47,136 @@
 
         <h4>{{service.title}}</h4>
         <p>{{service.description}}</p>
-        <span class="inquire">Inquire <i class="fa-solid fa-arrow-right-long"></i></span>
+        <span class="inquire" data-toggle="modal" data-target="#serviceRequestModal" (click)="user.category = service.title">Inquire <i class="fa-solid fa-arrow-right-long"></i></span>
       </div>
     </div>
   </div>
 
 
-  <app-contact-form></app-contact-form>
+  <!-- <app-contact-form></app-contact-form> -->
 
+</div>
+
+
+
+
+
+<div class="modal mail-in-modal fade p-0" id="serviceRequestModal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="mailInModalLabel" aria-hidden="true">
+
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="mailInModalLabel">
+          <span>Service inquiry</span>
+        </h5>
+        <button type="button" class="close" (click)="reset()" data-dismiss="modal" aria-label="Close" [disabled]="sending">
+          <span aria-hidden="true"><i class="fas fa-times-circle"></i></span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+        <div *ngIf="stage === 1" [@fadeIn]>
+          <p class="description">Fill in <strong>ALL</strong> the form fields accurately for better service</p>
+
+          <div class="alert alert-danger" *ngIf="hasError" [@fadeIn]>
+            <p class="m-0">Sorry, your details could not be sent at this time, please try again later !</p>
+          </div>
+
+          <form class="form">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="fullName">Your name</label>
+                  <input type="text" class="form-control" id="fullName" name="fullName" [(ngModel)]="user.fullName" placeholder="Enter your name" autocomplete="new-password">
+                </div>
+              </div>
+
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="">Organisation name</label>
+                  <input class="form-control" type="text" name="orgName" [(ngModel)]="user.orgName" autocomplete="new-password" placeholder="Enter your organisation name">
+                </div>
+              </div>
+
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="phone">Phone number</label>
+                  <input type="text" class="form-control" id="phone" name="phone" [(ngModel)]="user.phone" maxlength="12" oninput="this.value = this.value.replace(/[^0-9]/g, '').replace(/(\..*)\./g, '$1');" placeholder="Enter your phone number">
+                </div>
+              </div>
+
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="email">Email <small class="redText font-weight-normal ml-3" *ngIf="emailInvalid" [@fadeIn]>enter a valid email</small></label>
+                  <input type="text" class="form-control" id="email" name="email"  #emailInput [(ngModel)]="user.email" (ngModelChange)="emailInvalid = false" [ngClass]="{'red-border-input':emailInvalid}" placeholder="Enter your email">
+                </div>
+              </div>
+
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="">Category</label>
+                  <select class="form-control" name="category" [(ngModel)]="user.category">
+                    <option [value]="service.title" *ngFor="let service of services">{{service.title}}</option>
+                    <option value="General">General</option>
+                  </select>
+                </div>
+              </div>
+
+            </div>
+
+            <!-- <div class="form-group position-relative" [ngClass]="{'mb-1':ccEmails?.length}">
+              <label for="cc">CC emails <small>(optional)</small> <small class="redText font-weight-bold ml-3" *ngIf="ccEmailInvalid">enter a valid email</small> <small class="redText font-weight-bold ml-3" *ngIf="emailExists">email already in
+                  use</small></label>
+              <div class="input-group">
+                <input type="text" class="form-control" name="ccEmail" [(ngModel)]="ccEmail" (ngModelChange)="ccEmailInvalid = false;emailExists = false;" (keyup.enter)="ccEmail.length && validateCCEmail()"
+                  [ngClass]="{'red-border-input':ccEmailInvalid}" placeholder="e.g . company@gmail.com">
+                <button type="button" title="add email to cc" class="btn btn-add-email" [disabled]="!ccEmail.length" (click)="ccEmail.length && validateCCEmail()"><i class="fas fa-plus"></i></button>
+
+              </div>
+            </div> -->
+
+            <!-- <div class="selected-listing" *ngIf="ccEmails.length" [@fadeIn]>
+              <div class="d-inline">
+                <span class="selected-item" *ngFor="let email of ccEmails;index as i" [@fadeIn]>
+                  <span class="me-3">{{email}}</span>
+                  <span title="Edit" (click)="ccEmail = email;removeEmail(email,i)"><i class="fas fa-pen"></i></span>
+                  <span title="Remove" (click)="removeEmail(email,i)"><i class="fas fa-times"></i></span>
+                </span>
+              </div>
+            </div> -->
+
+            <div class="form-group">
+              <label for="message">Message</label>
+              <textarea name="message" class="form-control" id="message" name="message" [(ngModel)]="user.message" rows="4" placeholder="Enter a message about your inquiry'"></textarea>
+            </div>
+
+          </form>
+        </div>
+
+        <div class="success-div" *ngIf="stage === 2" [@fadeIn]>
+          <img src="assets/images/email-sent.png" alt="email-sent">
+
+          <span class="d-block">We've received your service inquiry details for <strong>{{user.category}}</strong>. <br>
+            <!-- with reference number <strong class="greenText d-inline-block">{{refId}}</strong> -->
+            Our Team will be in touch within the next 48 hours.
+          </span>
+        </div>
+
+      </div>
+
+      <!-- <div class="modal-footer pt-0" *ngIf="stage === 1">
+          <button type="button" class="btn btn-close mr-3" id="closeBtn" data-dismiss="modal">Decline</button>
+          <button type="button" class="btn btn-submit" (click)="stage = 2">Accept</button>
+        </div> -->
+
+      <div class="modal-footer pt-0" *ngIf="stage === 1">
+        <button type="button" class="btn btn-close mr-3" data-dismiss="modal" [disabled]="sending" (click)="reset()">Close</button>
+        <button type="button" class="btn btn-submit" (click)="sendEmail()"
+          [disabled]="sending || !user.phone || !user.email || !user.fullName || !user.message || emailInvalid">{{sending ? 'Sending ...' : 'Submit'}}</button>
+      </div>
+      <div class="modal-footer pt-0" *ngIf="stage === 2">
+        <button type="button" class="btn btn-close mr-3" data-dismiss="modal" (click)="reset()">Close</button>
+      </div>
+    </div>
+  </div>
 </div>
