--- a/src/app/components/services/services.component.scss
+++ b/src/app/components/services/services.component.scss
@@ -63,23 +63,33 @@
       padding: 5vh 20px;
       position: relative;
 
+      &:last-child {
+        border-bottom: none;
+      }
+
+      &:hover {
+        .inquire {
+          text-decoration: underline;
+        }
+      }
+
       .service-illustration-holder {
         display: block;
         width: 100%;
         margin-right: 5vw;
         margin-left: 0;
 
-
         img {
-          width: auto;
-          height: 300px;
+          width: 100%;
+          height: auto;
+          max-height: 300px;
           display: block;
           margin-bottom: 20px;
           filter: drop-shadow(0 10px 5px #4673b630);
         }
       }
 
-      .service-index{
+      .service-index {
         position: absolute;
         top: 0;
         font-size: 7rem;
@@ -90,6 +100,10 @@
         z-index: -1;
       }
 
+      .position-relative {
+        width: 100%;
+      }
+
       h4 {
         font-size: 1.7rem;
         margin-bottom: 20px;
@@ -98,7 +112,7 @@
       }
 
       p {
-        font-size: 1rem;
+        font-size: 0.9rem;
         line-height: 1.7rem;
         color: #80868b;
         margin-bottom: 30px;
@@ -113,7 +127,7 @@
         font-weight: 600;
         cursor: pointer;
 
-        i{
+        i {
           margin-left: 5px;
         }
       }
@@ -122,7 +136,7 @@
     .row-reverse {
       flex-direction: row-reverse;
 
-      .service-illustration-holder{
+      .service-illustration-holder {
         margin-left: 5vw;
         margin-right: 0;
       }
@@ -181,13 +195,15 @@
         position: absolute;
         bottom: 20px;
 
-        i{
+        i {
           margin-left: 5px;
         }
       }
     }
   }
 }
+
+
 @media (max-width: 600px) {
   .landing-section {
     padding-top: 100px!important;
