--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -13,10 +13,10 @@
           <!-- <a href="https://wa.me/" rel="external nofollow noopener" target="_blank">
             <i class="fa-brands fa-whatsapp"></i>
           </a> -->
-          <a href="tel:+6544444644" target="_blank">
+          <a href="tel:+0777547630" target="_blank">
             <i class="fa-solid fa-phone"></i>
           </a>
-          <a href="mailto:newdaycomm254.com" target="_blank">
+          <a href="mailto:newdaycomm254@gmail.com" target="_blank">
             <i class="fa-solid fa-envelope"></i>
           </a>
           <!-- <a target="_blank">
