changed contact bg changed phone number contact

--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -3,13 +3,13 @@
     padding: 5vh 0;
     background-color: #f8f9fa;
     height: 400px;
-    background-image: linear-gradient(-25deg , #90BF4D 1%, rgba(0,0,0,0.7) 20%),url("../../../assets/images/bg-office.jpg");
+    background-image: linear-gradient(-25deg , #90BF4D 1%, rgba(0,0,0,0.7) 20%),url("../../../assets/images/contact-bg.jpg");
     background-repeat: no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    background-position: top;
+    background-position: center;
     display: flex;
     align-items: center;
 
